# mpc-ilqr-mujoco

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.yaml  cost_analysis.txt  environment.yml  get_contacts.py  humanoid_plotter.py  plotter.py  simulate.py
.github/workflows/: ci.yml
app/: humanoid_mpc.cpp  pendulum_mpc.cpp
data/: contact_standing.csv  contact_walking.csv  h1_walking_pin.csv  q_ref.csv  q_ref2_mj.csv  q_ref2_pin.csv  q_standing.csv  q_standing.h5  q_standing.npz  q_walking2.csv  v_ref.csv  v_ref2.csv  v_standing.csv  v_standing.h5  v_standing.npz
include/: config.hpp  derivatives.hpp  ilqr.hpp  mpc.hpp  robot_utils.hpp
include/common/: config.hpp  robot_utils.hpp
include/ilqr/: ilqr.hpp  mpc.hpp
main/: humanoid_mpc.cpp
pendulum/: pendulum.xml  q_ref.csv  v_ref.csv
results/: q_optimal.csv  u_optimal.csv
src/: config.cpp  derivatives.cpp  ilqr.cpp  mpc.cpp  robot_utils.cpp
src/common/: config.cpp  derivatives.cpp  robot_utils.cpp
src/ilqr/: ilqr.cpp  mpc.cpp
